--- a/admin.html
+++ b/admin.html
@@ -203,12 +203,32 @@
       background: #fff;
       border-radius: 16px;
       padding: 24px;
-      max-width: 360px;
-      text-align: center;
+      max-width: 420px;
+      width: 100%;
+      text-align: left;
       border: 1px solid var(--card-border);
       box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
     }
-    .login-blocker-title { font-size: 18px; font-weight: 700; margin-bottom: 8px; }
+    .login-blocker-title { font-size: 18px; font-weight: 700; margin-bottom: 4px; }
+    .login-form { display: flex; flex-direction: column; gap: 12px; }
+    .login-field label {
+      display: block;
+      font-size: 12px;
+      font-weight: 600;
+      color: var(--muted);
+      margin-bottom: 6px;
+    }
+    .login-actions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: flex-end;
+      margin-top: 4px;
+    }
+    .login-actions .btn { min-width: 140px; }
 
     dialog.modal,
     .modal-overlay {
@@ -278,9 +298,24 @@
     <main class="content">
       <div id="login_blocker" class="login-blocker">
         <div class="login-blocker-card">
-          <div class="login-blocker-title">Vui lòng đăng nhập</div>
-          <p>Đăng nhập bằng tài khoản nội bộ để quản lý schema và tài khoản sử dụng Web Quản Trị.</p>
-          <button class="btn primary" type="button" onclick="openLogin()">Đăng nhập ngay</button>
+          <div>
+            <div class="login-blocker-title">Vui lòng đăng nhập</div>
+            <p class="muted" style="margin:0">Sử dụng tài khoản nội bộ để quản lý schema và tài khoản sử dụng Web Quản Trị.</p>
+          </div>
+          <div class="login-form">
+            <div class="login-field">
+              <label for="login_user">Tài khoản</label>
+              <input id="login_user" class="input" type="text" autocomplete="username" />
+            </div>
+            <div class="login-field">
+              <label for="login_pass">Mật khẩu</label>
+              <input id="login_pass" class="input" type="password" autocomplete="current-password" />
+            </div>
+            <div class="login-actions">
+              <button class="btn primary" type="button" id="btn_login_do">Đăng nhập</button>
+            </div>
+            <div class="muted" style="font-size:12px">Bạn cũng có thể đăng nhập Google (nếu email của bạn nằm trong danh sách cho phép).</div>
+          </div>
         </div>
       </div>
 
@@ -406,31 +441,6 @@
         </div>
       </section>
     </main>
-  </div>
-
-  <div id="dlg_login" class="modal modal-overlay">
-    <div class="box">
-      <div class="head">
-        <div class="title">Đăng nhập tài khoản nội bộ</div>
-      </div>
-      <div class="body">
-        <div class="field">
-          <label for="login_user">Tài khoản</label>
-          <input id="login_user" class="input" type="text" autocomplete="username" />
-        </div>
-        <div class="field">
-          <label for="login_pass">Mật khẩu</label>
-          <input id="login_pass" class="input" type="password" autocomplete="current-password" />
-        </div>
-        <div class="muted" style="margin-top:8px">
-          Bạn cũng có thể đăng nhập Google (nếu email của bạn nằm trong danh sách cho phép).
-        </div>
-      </div>
-      <div class="foot">
-        <button class="btn ghost" type="button" onclick="closeLoginDialog()">Đóng</button>
-        <button class="btn primary" type="button" id="btn_login_do">Đăng nhập</button>
-      </div>
-    </div>
   </div>
 
   <script>
@@ -883,15 +893,18 @@
     function openLogin(){ showLoginDialog(); }
 
     function showLoginDialog(){
+      const blocker = document.getElementById('login_blocker');
+      if (blocker) blocker.classList.remove('hidden');
       const dlg = document.getElementById('dlg_login');
-      if (!dlg) return;
-      if (dlg.classList?.contains('modal-overlay')){
-        dlg.classList.add('show');
-      } else if (typeof dlg.showModal === 'function'){
-        if (!dlg.open) dlg.showModal();
-      } else {
-        dlg.setAttribute('open', 'true');
-        dlg.classList.add('show');
+      if (dlg){
+        if (dlg.classList?.contains('modal-overlay')){
+          dlg.classList.add('show');
+        } else if (typeof dlg.showModal === 'function'){
+          if (!dlg.open) dlg.showModal();
+        } else {
+          dlg.setAttribute('open', 'true');
+          dlg.classList.add('show');
+        }
       }
       const user = document.getElementById('login_user');
       if (user){
@@ -901,14 +914,15 @@
 
     function closeLoginDialog(){
       const dlg = document.getElementById('dlg_login');
-      if (!dlg) return;
-      if (dlg.classList?.contains('modal-overlay')){
-        dlg.classList.remove('show');
-      } else if (typeof dlg.close === 'function'){
-        dlg.close();
-      } else {
-        dlg.removeAttribute('open');
-        dlg.classList.remove('show');
+      if (dlg){
+        if (dlg.classList?.contains('modal-overlay')){
+          dlg.classList.remove('show');
+        } else if (typeof dlg.close === 'function'){
+          dlg.close();
+        } else {
+          dlg.removeAttribute('open');
+          dlg.classList.remove('show');
+        }
       }
     }
 
