--- a/cms_styles.html
+++ b/cms_styles.html
@@ -77,22 +77,38 @@
   body.needs-login .app > :not(#login_blocker){ pointer-events:none; }
   .login-blocker.hidden{ display:none !important; }
   .login-blocker-card{
-    max-width:360px;
+    max-width:420px;
     width:100%;
     padding:24px;
     background:#fff;
     border-radius:var(--radius);
-    box-shadow:0 20px 45px rgba(15,23,42,0.25);
-    text-align:center;
+    box-shadow:0 20px 45px rgba(15,23,42,0.18);
     display:flex;
     flex-direction:column;
-    gap:16px;
+    gap:18px;
+    text-align:left;
   }
   .login-blocker-title{
     font-size:18px;
     font-weight:700;
     color:var(--pri);
+    margin-bottom:4px;
   }
+  .login-form{ display:flex; flex-direction:column; gap:12px; }
+  .login-field label{
+    display:block;
+    font-size:12px;
+    font-weight:600;
+    color:var(--muted);
+    margin-bottom:6px;
+  }
+  .login-actions{
+    display:flex;
+    justify-content:flex-end;
+    gap:10px;
+    flex-wrap:wrap;
+  }
+  .login-actions .btn{ min-width:140px; }
 
   /* Sidebar (menu dọc) */
   #menu{
@@ -242,6 +258,7 @@
     grid-template-columns:repeat(auto-fit, minmax(220px, 1fr));
     gap:16px;
     margin-top:16px;
+    align-items:stretch;
   }
   .feature{
     padding:16px;
@@ -252,6 +269,7 @@
     display:flex;
     flex-direction:column;
     gap:8px;
+    height:100%;
   }
   .feature-title{
     font-weight:700;
@@ -429,17 +447,29 @@
   /* ================== LOAN MANAGER ================== */
   .loanmgr-layout{
     display:grid;
-    grid-template-columns:minmax(0,1fr) minmax(280px, 360px);
-    gap:16px;
+    grid-template-columns:minmax(320px, 360px) minmax(0,1fr);
+    gap:20px;
+    align-items:flex-start;
   }
   .loanmgr-left,
   .loanmgr-right{ display:flex; flex-direction:column; gap:16px; }
-  .slip-control{ display:flex; flex-direction:column; gap:12px; margin-bottom:16px; }
-  .slip-row{ display:flex; flex-wrap:wrap; align-items:center; gap:8px; }
-  .slip-row label{ font-size:13px; font-weight:600; color:var(--muted); }
-  .slip-row .input{ min-width:140px; }
-  .slip-range-label{ min-width:140px; }
-  .slip-range-sep{ font-weight:600; }
+  .slip-filters{ display:grid; gap:12px; }
+  .slip-filters--primary{ grid-template-columns:minmax(0,1fr) minmax(160px,220px) minmax(150px,auto); }
+  .slip-filters--range{ grid-template-columns:minmax(0,1fr) minmax(0,1fr) minmax(160px,auto); }
+  @media (max-width: 900px){
+    .loanmgr-layout{ grid-template-columns:1fr; }
+    .slip-filters--primary,
+    .slip-filters--range{ grid-template-columns:repeat(auto-fit, minmax(160px,1fr)); }
+  }
+  .slip-field label{
+    display:block;
+    font-size:12px;
+    font-weight:600;
+    color:var(--muted);
+    margin-bottom:6px;
+  }
+  .slip-actions{ display:flex; justify-content:flex-end; align-items:stretch; }
+  .slip-actions .btn{ width:100%; min-height:36px; }
   .slip-summary{
     border:1px solid var(--border);
     border-radius:var(--radius);
@@ -473,6 +503,11 @@
     padding:12px 16px;
     font-weight:600;
     color:#312e81;
+  }
+  .tbl td.empty-cell{
+    text-align:center;
+    color:var(--muted);
+    font-style:italic;
   }
 
   /* ================== KPI CONFIG ================== */
